# FSOFT-Supermarket

./: README.md
StoreApp/: CMakeLists.txt  main.cpp
StoreApp/headers/controllers/: Controller.h
StoreApp/headers/exceptions/: DataConsistencyException.h  DuplicatedDataException.h  InvalidDataException.h
StoreApp/headers/model/: Estabelecimento.h  EstabelecimentoContainer.h  Gestao.h  GestaoContainer.h  Lojas.h  Preco.h  Produto.h  ProdutoContainer.h
StoreApp/headers/views/: EstabelecimentoView.h  GestaoView.h  ProdutoView.h  Utils.h  View.h
StoreApp/mock/: MockData.cpp  MockData.h
StoreApp/sources/controllers/: Controller.cpp
StoreApp/sources/exceptions/: DataConsistencyException.cpp  DuplicatedDataException.cpp  InvalidDataException.cpp
StoreApp/sources/model/: Estabelecimento.cpp  EstabelecimentoContainer.cpp  Gestao.cpp  GestaoContainer.cpp  Lojas.cpp  Preco.cpp  Produto.cpp  ProdutoContainer.cpp
StoreApp/sources/views/: EstabelecimentoView.cpp  GestaoView.cpp  ProdutoView.cpp  Utils.cpp  View.cpp
StoreAppTester/: CMakeLists.txt  estabelecimento_test.cpp  main.cpp  produto_test.cpp
